fix docker plugin versions